--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
+    "clarifai": "^2.9.1",
+    "particlesjs": "^2.2.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-particles-js": "^3.4.1",
     "react-scripts": "4.0.1",
     "react-tilt": "^0.1.4",
     "tachyons": "^4.12.0",
