--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,19 +16,23 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  test:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      # test the Application
-      - name: test app
+      - name: run unit test suites
         run: npm run test
+  build:
+    runs-on: ubuntu-latest
 
-      # Build the app
-      - name: build app
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: install dependencies
+        run: npm install
+
+      - name: build artefacts
         run: npm run build
