--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "build": "react-scripts build",
     "test": "echo 'Error: no test specified' && exit 0",
     "eject": "react-scripts eject",
-    "eslint": "eslint ."
+    "eslint": "eslint .",
+    "commit": "npx git-cz"
   },
   "browserslist": {
     "production": [
